--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,50 +1,61 @@
-
-:root{
-    --primary-text-color: #757575; 
-    --primary-title-color: #212121;
-    --accent-color: #2196F3;
+:root {
+  --primary-text-color: #757575;
+  --primary-title-color: #212121;
+  --accent-color: #2196f3;
+  --background-color: #ffffff;
 }
-
 
 body {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: var(--primary-text-color);
-}
 
+  font-family: Roboto, sans-serif;
+}
 
 ul {
   list-style: none;
 }
-
 
 .logo {
   color: #000000;
   text-decoration: none;
 
   font-family: Raleway;
+  font-size: 26px;
+  line-height: normal;
+  letter-spacing: 0.78px;
 }
-
 
 .logo-span {
   color: var(--accent-color);
 }
 
-
- /* Header */
-
+/* Header */
+.nav {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: 0.28px;
+}
 
 .nav .link {
   color: var(--primary-title-color);
   text-decoration: none;
 }
 
-.nav .link.current{
+.nav .link.current {
   color: var(--accent-color);
 }
 
 .nav .link:hover,
 .nav .link:focus {
   color: var(--accent-color);
+}
+
+.contacts {
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: 0.28px;
 }
 
 .contacts .link {
@@ -64,72 +75,137 @@ ul {
   text-align: center;
 }
 
-.hero .title{
-    color: #FFFFFF;
+.hero .title {
+  color: var(--background-color);
+
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.4;
+  letter-spacing: 2.64px;
+  text-transform: uppercase;
 }
 
 .hero .button {
-    background-color: var(--accent-color);
-    color: #FFFFFF;
+  background-color: var(--accent-color);
+  color: var(--background-color);
+  text-decoration: none;
+
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.9;
+  letter-spacing: 0.96px;
 }
 
- /* Our skills */
+/* Our skills */
 
 .skills-title {
-    color: var(--primary-title-color);
+  color: var(--primary-title-color);
+
+  font-size: 14px;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
 }
 
- /* Work */
-
-.work-title{
-    color: var(--primary-title-color);
-    text-align: center;
+.skills-text {
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
 }
- /* Our team */
 
-.team-title{
-    color: var(--primary-title-color);
-}       
-.team-names{
-    color: var(--primary-title-color);
-}            
+/* Work */
 
+.work-title {
+  color: var(--primary-title-color);
+  text-align: center;
+
+  font-size: 36px;
+  letter-spacing: 1.08px;
+}
+/* Our team */
+
+.team {
+  background-color: #f5f4fa;
+}
+
+.team-title {
+  color: var(--primary-title-color);
+  text-align: center;
+  font-size: 36px;
+  line-height: normal;
+  letter-spacing: 1.08px;
+}
+.team-names {
+  color: var(--primary-title-color);
+
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.48px;
+}
+
+.team-text {
+  font-size: 16px;
+  line-height: normal;
+  letter-spacing: 0.48px;
+}
 
 /* Footer */
 
-.footer{
-    background-color: #2F303A;
+.footer {
+  background-color: #2f303a;
 }
 
-.footer .logo{
-    color: #FFFFFF;
+.footer .logo {
+  color: var(--background-color);
 }
 
-.footer-adress{
-    color: #FFFFFF;
-    text-decoration: none;
+.footer-adress {
+  color: var(--background-color);
+  text-decoration: none;
+
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
 }
 
 .footer-adress:hover,
-.footer-adress:focus{
-    color: var(--accent-color);
+.footer-adress:focus {
+  color: var(--accent-color);
 }
 
-                                                  /* PORTFOLIO */
-  .portfolio-button{
-    color: var(--primary-title-color);
-    background-color: #F5F4FA;
-    cursor: pointer;
-    border: none;
+/* PORTFOLIO */
 
-  }
+.portfolio-button {
+  color: var(--primary-title-color);
+  background-color: #f5f4fa;
+  cursor: pointer;
+  border: none;
 
-  .portfolio-button:hover,
-  .portfolio-button:focus{
-    background-color: var(--accent-color);
-    color: #FFFFFF;
-  }
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.6;
+  letter-spacing: 0.48px;
+}
 
-  .portfolio-title{
-    color: var(--primary-title-color);
-  }
+.portfolio-button:hover,
+.portfolio-button:focus {
+  background-color: var(--accent-color);
+  color: var(--background-color);
+}
+
+.portfolio-title {
+  color: var(--primary-title-color);
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 2;
+  letter-spacing: 1.08px;
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.85;
+  letter-spacing: 0.48px;
+}
